[package]
name = "rangetree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
smallvec = "1.10.0"

[features]
cursors = []

[dev-dependencies]
criterion = "0.4.0"
iai = "0.1.1"

[[bench]]
name = "bench"
harness = false
